add full calculator logic, minor changes

--- a/index.html
+++ b/index.html
@@ -12,25 +12,30 @@
         <p class="input"></p>
     </div>
     <div class="button-container">
-        <a class="button delete"><img src="icons/delete.svg" alt="Delete Icon"></a>
-        <a class="button">C</a>
-        <a class="button">%</a>
-        <a class="button equals">=</a>
-        <a class="button">7</a>
-        <a class="button">8</a>
-        <a class="button">9</a>
-        <a class="button">+</a>
-        <a class="button">4</a>
-        <a class="button">5</a>
-        <a class="button">6</a>
-        <a class="button">-</a>
-        <a class="button">1</a>
-        <a class="button">2</a>
-        <a class="button">3</a>
-        <a class="button">*</a>
-        <a class="button zero">0</a>
-        <a class="button">.</a>
-        <a class="button">/</a>
+        <button class="backspace"><img src="icons/delete.svg" alt="Delete Icon"></button>
+        <button class="clear">C</button>
+        <button class="remainder">%</button>
+        <button class="equals">=</button>
+        <button class="seven">7</button>
+        <button class="eight">8</button>
+        <button class="nine">9</button>
+        <button class="add">+</button>
+        <button class="four">4</button>
+        <button class="five">5</button>
+        <button class="six">6</button>
+        <button class="subtract">-</button>
+        <button class="one">1</button>
+        <button class="two">2</button>
+        <button class="three">3</button>
+        <button class="multiply">*</button>
+        <button class="zero">0</button>
+        <button class="dot">.</button>
+        <button class="divide">/</button>
     </div>
 </body>
+<footer>
+    <p>Prosty kalkulator w javascript. <a href="https://github.com/pawlash/simple-calculator">Źródło w GitHub</a></p>
+</footer>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/mathjs/13.0.3/math.min.js"></script>
+<script src="calculator.js"></script>
 </html>
