convert to english

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
     </div>
 </body>
 <footer>
-    <p>Prosty kalkulator w javascript. <a href="https://github.com/pawlash/simple-calculator">Źródło w GitHub</a></p>
+    <p>Simple javascript calculator. <a href="https://github.com/pawlash/simple-calculator">See the source on GitHub</a></p>
 </footer>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/mathjs/13.0.3/math.min.js"></script>
 <script src="calculator.js"></script>
